--- a/batman.html
+++ b/batman.html
@@ -6,7 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="/js/main.js"></script>
     <link rel="stylesheet" href="/css/style.css">
-    <title>KelS webpage on cheetahs</title> 
+    <title>kels mini assignment 2</title> 
 </head>
 <body>
     <!-- Your content goes here -->
