made changes on html

--- a/index4.html
+++ b/index4.html
@@ -21,7 +21,7 @@
     <ul>
         <li> Cheetahs are the fastest lands animals in the world</li> 
         <li> you can find cheetahs mostly in the sub saharan part of africa</li>
-        <li> Each cheetah hasd there own distinct pattern of spots</li>
+        <li> Each cheetah has there own distinct pattern of spots</li>
     </ul> 
     
         
