made changes tp html and css

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- Your content goes here -->
     <h1>This is a cheetah!</h1>
     <div id="cheetah">
-       <img src="https://th.bing.com/th/id/R.00e8f3c1d6c29fb73f3c3a2465fc382c?rik=KSLxmVBd%2f9w1TQ&riu=http%3a%2f%2fayay.co.uk%2fbackgrounds%2fanimals%2fcheetahs%2fWildlife-Cheetah.jpg&ehk=fq6QfAmRDDBKo3K4yZfRwWIcwyeBKNQ7jH%2fy%2b6GECTg%3d&risl=&pid=ImgRaw&r=0" width="500" height="500">
-       <br> 
+       <img src="images/cheetah1.jpg" height="300" width="300">
+       <br>
        <button id="btn">Click me</button>
     </div>
     <p> This cat can run 75mph and is very good at hunting </p>  
