made changes to html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
        <br>
        
     </div>
-    <p> This cat can run 75mph and is very good at hunting </p>  
+    <p> This cat can run 75mph and is very good at hunting </p> 
+    
+    <p> these are some facts about cheetahs:</p>
 
     <ul>
         <li> Cheetahs are the fastest lands animals in the world</li> 
